--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-file-base64": "^1.0.3",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.5.1",
     "typescript": "^3.9.7"
